--- a/src/MailLobbyer/Pages/About.razor
+++ b/src/MailLobbyer/Pages/About.razor
@@ -4,7 +4,7 @@
 
 <h1 class="page-title">About</h1>
 
-<p>MailLobbyer is a CSV-based group emailing solution with SMTP integration.</p>
+<p>MailLobbyer-Free is a CSV-based group emailing solution with SMTP integration.</p>
 
 <h2>Contact</h2>
 <p>If you have any questions, feedback, or bug reports, please feel free to reach out to me:</p>
