--- a/src/MailLobbyer/wwwroot/css/app.css
+++ b/src/MailLobbyer/wwwroot/css/app.css
@@ -91,6 +91,7 @@ a:focus, a:hover {
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.185);
 }
 
 .subform-group {
