--- a/src/MailLobbyer/Shared/NavMenu.razor
+++ b/src/MailLobbyer/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="navbar">
     <div class="navbar-brand">
-        <span>MailLobbyer-Free</span>
+        <span>MailLobbyer-Demo</span>
     </div>
     <div class="navbar-links">
         <ul>
