--- a/src/MailLobbyer/Pages/About.razor
+++ b/src/MailLobbyer/Pages/About.razor
@@ -6,7 +6,8 @@
     <h1 class="about-h1">About:</h1>
     <div class="about-content">
         <img class="about-logo" src="favicon.svg">
-        <p>MailLobbyer-Free is a CSV-based group emailing solution with SMTP integration.</p>
+        <p>MailLobbyer-Demo is a CSV-based group emailing solution with SMTP integration.</p>
+        <p>This is a demonstration WASM app and has no functional purpose.</p>
     </div>
 </div>
 
@@ -23,7 +24,7 @@
                 <a href="mailto:peterhamilton522@gmail.com" aria-label="Email: peterhamilton522@gmail.com">Email</a>
             </li>
             <li>
-                <a href="https://github.com/Pa1yn-dev" aria-label="GitHub">GitHub</a>
+                <a href="https://github.com/Pa1yn-dev/MailLobbyer-Demo" aria-label="GitHub">GitHub</a>
             </li>
         </ul>
     </div>  
